# AegisIPC

./: .commitlintrc.json  .env.example  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Makefile  README.md  SECURITY.md  coverage.json  docker-compose.yaml  pyproject.toml  story_coverage.json
.github/: dependabot.yml
.github/workflows/: ci.yaml
docs/: architecture.md  prd.md  project-brief.md
docs/architecture/: 1-介绍.md  2-顶层架构设计-high-level-architecture.md  3-技术栈-tech-stack.md  4-组件-components.md  5-核心工作流-core-workflows.md  6-代码目录结构-source-tree.md  7-测试与部署策略.md  8-错误处理与编码规范.md  9-测试要求标准.md  index.md
docs/prd/: 1-目标与背景上下文.md  2-需求.md  3-技术假设.md  4-史诗-epics.md  index.md
docs/stories/: 1.1.story.md  1.2.story.md  1.3.story.md  1.4.story.md  1.5.story.md  2.1.story.md  2.2.story.md
scripts/: QA_REVIEW_REPORT.md  demo_story_1_1_nats.py  demo_story_1_2_nats.py  demo_story_1_3_nats.py  demo_story_1_4_nats.py  demo_story_1_5_nats.py  demo_story_2_1_nats.py  demo_story_2_2_nats.py  demo_utils.py  install-hooks.sh  story_2_1_summary.md  test_heartbeat_simple.py  verify_story_1_1_implementation.py  verify_story_2_1_implementation.py
